OOB: Fixes for version v1.48 WINKSTART-649: Fixes the validation for Caller-ID (the front-end validation was not the same than the one used in the back-end) WINKSTART-650: Changes Equipment tab to be displayed as Devices. WINKSTART-651: Fix form alignment in ring groups. WINKSTART-652: Fix tooltip background-color in callflows.

--- a/whapps/voip/callflow/css/callflow.css
+++ b/whapps/voip/callflow/css/callflow.css
@@ -93,7 +93,7 @@
     margin-top: 25px;
 }
 
-#ws_callflow .help_box {
+#ws_callflow .tip_box {
     background-color: #3D3D3D;
     border: 1px solid #333333;
     border-radius: 0 0 13px 13px;
